2005-05-09  Jan Beulich  <jbeulich@novell.com>

	* gas/i386/tlsd.[sd]: Adjust to not assume zero displacement will
	actually be present in memory addressing.
	* gas/i386/tlspic.[sd]: Likewise.

2005-05-07  H.J. Lu  <hongjiu.lu@intel.com>

	PR 940
	* gas/ia64/group-2.d: New.
	* gas/ia64/group-2.s: New.

	* gas/ia64/ia64.exp: Add "group-2".

2005-05-07  H.J. Lu  <hongjiu.lu@intel.com>

	PR 843
	* gas/i386/i386.exp: Add x86-64-branch.

	* gas/i386/x86-64-branch.d: New.
	* gas/i386/x86-64-branch.s: New.

2005-05-06  Jan Beulich  <jbeulich@novell.com>

	* gas/macros/badarg.s: Add check for bad qualifier specification.
	* gas/macros/badarg.l: Adjust.
	* gas/macros/vararg.[sd]: New.
	* gas/macros/macros.exp: Run new test.

2005-05-06  Jan Beulich  <jbeulich@novell.com>

	* gas/all/cond.s: Also test .ifb/.ifnb.
	* gas/all/cond.d: Adjust.

2005-05-06  Jan Beulich  <jbeulich@novell.com>

	* gas/macros/dot.s: Don't use pseudo-ops in first column.
	* gas/macros/dot.l: Match broader range of possible outputs.
	* gas/macros/purge.l: Likewise.
	* gas/macros/purge.s: Start generated macro names with an underscore.

2005-05-05  Paul Brook  <paul@codesourcery.com>

	* gas/i386/i386.exp: Don't run divide test on vxworks.

2005-05-05  Nick Clifton  <nickc@redhat.com>

	* Update the address and phone number of the FSF organization in
	the GPL notices in the following files:
	gas/all/itbl-test.c, gas/all/test-example.c, gas/all/test-gen.c,
	gas/arm/maverick.c, gas/cris/cris.exp, gas/hppa/basic/basic.exp,
	gas/hppa/parse/parse.exp, gas/hppa/reloc/reloc.exp,
	gas/hppa/unsorted/unsorted.exp, gas/m88k/m88k.exp,
	gas/mmix/mmix-err.exp, gas/mmix/mmix-list.exp, gas/mmix/mmix.exp,
	gas/mn10200/basic.exp, gas/mn10300/am33-2.c,
	gas/mn10300/basic.exp, gas/pdp11/opcode.s, gas/ppc/aix.exp,
	gas/sh/basic.exp, gas/sh/err.exp, gas/sh/arch/arch.exp,
	gas/sh/sh64/sh64.exp, gas/v850/basic.exp, lib/gas-defs.exp

2005-05-05  Mike Frysinger  <vapier@gentoo.org>
